# TemplateCMakeProject

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt
